Fix overflow issue in the grid and change outlines to borders

--- a/src/components/guess-column/guess-column.css
+++ b/src/components/guess-column/guess-column.css
@@ -2,7 +2,3 @@
   display: grid;
   grid-template-rows: repeat(5, minmax(0, 1fr));
 }
-
-.guess-column:not(:last-child) {
-  outline: #095256 solid 1px;
-}
