--- a/src/components/guess-entry/guess-entry.css
+++ b/src/components/guess-entry/guess-entry.css
@@ -4,7 +4,7 @@
 }
 
 .guess-entry {
-  outline: #095256 solid 1px;
+  border: #095256 solid 1px;
 }
 
 .r {
