--- a/src/components/guess-validator/guess-validator.css
+++ b/src/components/guess-validator/guess-validator.css
@@ -1,12 +1,15 @@
 .guess-validator {
   display: grid;
+  overflow: hidden;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: auto;
   grid-template-areas:
     "top-left top-right"
     "bottom-left bottom-right";
 }
 
 .validator-border {
-  outline: #095256 solid 1px;
+  border: #095256 solid 1px;
 }
 
 .correct {
